--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     // "OrderConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=OrderDb;",
-    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+    "OrderConnection": "Server=DESKTOP-J61S20Q;Database=OrderDb;User Id=sa;Password=SwN12345678;"
   },
   "Logging": {
     "LogLevel": {
